# PDFTranslator

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  translate.css  translate.py
